--- a/test/about.html
+++ b/test/about.html
@@ -27,11 +27,17 @@
                 My journey into the world of web design started at CITE Technical Institute, where I graduated with a strong foundation in both design principles and technical skills. Since then, I've been on a mission to create visually appealing and functional websites that leave a lasting impression. 
                 What sets me apart is not just my technical expertise, but also my passion for understanding the unique needs of each project and turning them into reality.
             </p>
+            <a href="https://drive.google.com/file/d/1pqdYgQOiU-efUFAHmIqwjN_yaXMWBv-X/view?usp=drive_link" target="_blank">
+                <button class="buttonresume" role="button">Resume</button>
+            </a>
         </div>
+
     </main>
     <div class="aboutimage">
       <img src="images/about.jpg" alt="aboutpic" class="jorge2">
     </div>
+
+   
   
 </body>
 </html>
