--- a/test/services.html
+++ b/test/services.html
@@ -22,24 +22,60 @@
         </ul>
     </nav>
 
-    <section class="blog">
-        <div class="container">
-            <!-- header of section -->
-            <div class="blog-head text-center">
-              <h2>Custom Web Design</h2>
-            </div>
-  
-            <!-- blog items -->
-            <div class="row">
-              <div class="col-md-6 col-lg-4">
-                <div class="item animated wow fadeIn">
-                    <img src="images/customweb.png" alt="customservice">
-                    <div class="overlay top-overlay">
-      <div class="text">Top Overlay</div>
-    
 
-    
+      <section class="services">
+        <div class="row">
+          <h2 class="section-heading">Our <span>Services</span></h2>
+        </div>
+        <div class="row">
+
+
+          <div class="column">
+            <div class="card1">
+              <div class="icon-wrapper">
+                <img src="images/CUSTOMWEB.png" alt="Service Icon" class="customweb">
+              </div>
+              <h3>Website Design and Development</h3>
+              <div class="hide">
+                From initial concept to final launch, our process ensures a user-friendly, visually stunning, and responsive website that stands out.
+              </div>
+            </div>   
+          </div>
+
+
+          <div class="column">
+            <div class="card2">
+              <div class="icon-wrapper">
+                <img src="images/UIUX.png" alt="Service Icon" class="uiux">
+              </div>
+              <h3>UI/UX Design</h3>
+              <div class="hide">
+                Our UI/UX design services focus on creating intuitive and 
+                engaging user interfaces that enhance user satisfaction and drive conversions.
+              </div>
+            </div>
+          </div>
+
+
+          <div class="column">
+            <div class="card3">
+              <div class="icon-wrapper">
+                <img src="images/RESPONSIVE.png" alt="Service Icon" class="responsive">
+              </div>
+              <h3>Responsive Design</h3>
+              <div class="hide">
+                We specialize in crafting websites that adapt seamlessly to different devices and screen sizes,
+                 ensuring an optimal viewing experience for all users.
+              </div>
+            </div>
+          </div>
+
+
+
+
+        </div>
       </section>
+
 
 </body>
 </html>
